--- a/project.json
+++ b/project.json
@@ -7,10 +7,10 @@
     "UiPath.Excel.Activities": "[2.24.1]",
     "UiPath.Mail.Activities": "[1.23.11]",
     "UiPath.OCR.Activities": "[3.21.0-preview]",
+    "UiPath.PDF.Activities": "[3.20.0-preview]",
     "UiPath.System.Activities": "[24.11.0-preview]",
     "UiPath.Testing.Activities": "[24.10.2-preview]",
-    "UiPath.UIAutomation.Activities": "[24.11.1-preview]",
-    "UiPath.WorkflowEvents.Activities": "3.0.0"
+    "UiPath.UIAutomation.Activities": "[24.11.1-preview]"
   },
   "webServices": [],
   "entitiesStores": [],
